# VentionMotionPlanner

./: .gitignore  ReadMe.md  f.txt  move.sh  reconstruct.py  simple_stacking_fixed.py  simplified_base_link.stl  simplified_harsh.stl  weights_compare.py
assets/object/: collision.xml  collision_gantry.xml  conveyor.xml  floor_sky_below_zero.xml  obj_cube.xml
assets/ur5e/: scene_ur5e.xml  scene_ur5e_2f140_obj.xml  scene_ur5e_2f140_obj_gantry.xml  scene_ur5e_2f140_obj_suction.xml  scene_ur5e_2f85_obj.xml  scene_ur5e_obj_gantry_suction.xml  scene_ur5e_rg2.xml  scene_ur5e_rg2_d435i_obj.xml  ur5e.xml  ur5e_2f140.xml  ur5e_2f140_gentry_with_suction.xml  ur5e_2f140_x.xml  ur5e_2f85.xml  ur5e_2f85_x.xml  ur5e_gentry_with_suction.xml  ur5e_rg2.xml  ur5e_rg2_d435i.xml  ur5e_suction.xml
config/: demos.yml
demo_scripts/: constrained.sh  lateral.sh  non_constrained.sh  pick_and_place_gantry.sh  pick_and_place_suction.sh  vention_cell_move.sh
motion_planner/: .gitignore  BUILD  MODULE.bazel
motion_planner/proto/: motion_planner.proto  motion_planner_pb2.py  motion_planner_pb2_grpc.py
motion_planner/src/: curobo_backend.h  motion_planner_backend.h  motion_planner_server.cpp  moveit_backend.h
motion_planner/tests/: test_motion_planner_client.py
mujoco_scripts/: MUJOCO_LOG.TXT  ReadMe.md  basic_viewer.py  collision_test.yml  conveyor.py  dynamic_obstacle.py  ff.py  lateral_movement.py  lateral_movement_constrained.py  mujoco_parser.py  profiling_script.py  simple_script.py  simple_stacking.py  simple_stacking_suction.py  smple_script_suction.py  util.py
mujoco_scripts/constrained_movement/: lateral_movement.py
src/: ReadMe.md
src/curobo_action/: CMakeLists.txt  package.xml
src/motion_plan/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/motion_plan/motion_plan/: collision_test.yml  path_planner.py  rviz_publisher.py
src/motion_plan/motion_plan/CAD/: *
util/: reconstruct.py
(+116 files in other folders)
