<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_plan</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>ament_cmake</depend>
  <depend>sensor_msgs</depend> <!-- Required for publishing joint states -->
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>ur_description</depend>
  <depend>joint_state_publisher</depend> <!-- Added for joint state visualization -->
  <depend>joint_state_publisher_gui</depend> <!-- Optional: GUI for joint states -->
  <depend>robot_state_publisher</depend> <!-- Required for URDF to TF broadcasting -->
  <depend>rviz2</depend> <!-- Required for RViz visualization -->
  <depend>xacro</depend> <!-- Required for processing URDF xacro files -->
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
